--- a/Wagnerett/Wagnerett/css/main.css
+++ b/Wagnerett/Wagnerett/css/main.css
@@ -47,10 +47,29 @@ body {
 }
 
 .RadioBox .Button {
-    width: 20px;
-    height: 20px;
+    display: flex;
 
-    background: black;
+    align-items:center;
+    justify-content:center;
+
+    width: 25px;
+    height: 25px;
+
+    background: none;
+    border: 3px solid #000;
+
+    box-sizing:border-box;
+
+    border-radius: 100%;
+}
+
+.RadioBox .Button .Dot {
+    width: 0%;
+    height: 0%;
+    
+    opacity: 0.0;
+
+    background-color: black;
 
     border-radius: 100%;
 }
