--- a/Wagnerett/Wagnerett/Master.Master
+++ b/Wagnerett/Wagnerett/Master.Master
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     
     <link href="/css/main.css" type="text/css" rel="stylesheet" />
+    <link href="/css/radiobutton.css" rel="stylesheet" />
     <link href="/css/font.css" type="text/css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
