--- a/Wagnerett/Wagnerett/css/main.css
+++ b/Wagnerett/Wagnerett/css/main.css
@@ -32,48 +32,11 @@ body {
 
     color: #EEE;
 
-    background-color: red;
+    background-color: #333;
 }
 
 #Body {
     flex: 2;
 
-    background: blue;
-}
-
-.RadioBox {
-    display: flex;
-    flex-direction: row;
-}
-
-.RadioBox .Button {
-    display: flex;
-
-    align-items:center;
-    justify-content:center;
-
-    width: 25px;
-    height: 25px;
-
-    background: none;
-    border: 3px solid #000;
-
-    box-sizing:border-box;
-
-    border-radius: 100%;
-}
-
-.RadioBox .Button .Dot {
-    width: 0%;
-    height: 0%;
-    
-    opacity: 0.0;
-
-    background-color: black;
-
-    border-radius: 100%;
-}
-
-.RadioBox .Label {
-    flex: 2;
+    background: #222;
 }
