--- a/Wagnerett/Wagnerett/css/font.css
+++ b/Wagnerett/Wagnerett/css/font.css
@@ -12,3 +12,16 @@
     font-family: MoonLight;
     src: url(font/Moon2.0-Light.otf);
 }
+
+
+/* Comic Neue */
+
+@font-face {
+    font-family: ComicNeue;
+    src: url(font/ComicNeue-Regular.otf);
+}
+
+@font-face {
+    font-family: ComicNeueBold;
+    src: url(font/ComicNeue_Bold.otf);
+}
