--- a/Wagnerett/Wagnerett/css/poll.css
+++ b/Wagnerett/Wagnerett/css/poll.css
@@ -2,7 +2,7 @@
     background: #333;
     margin: 10px;
 
-    border-radius: 1px;
+    border-radius: 2px;
 
     padding: 5px;
 }
@@ -12,15 +12,17 @@
     font-size: 25px;
 
     margin-bottom: 10px;
+    margin-left: 8px;
 
     color: white;
 }
 
 .Answer {
     font-family: ComicNeueBold;
-    color: #BBB;
+    color: #EEE;
 
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .Answer:not(:last-child) {
