--- a/Wagnerett/Wagnerett/css/poll.css
+++ b/Wagnerett/Wagnerett/css/poll.css
@@ -1,6 +1,8 @@
 ﻿.PollBox {
     background: #333;
     margin: 10px;
+    margin-left: 0;
+    margin-right: 0;
 
     border-radius: 2px;
 
@@ -27,4 +29,67 @@
 
 .Answer:not(:last-child) {
     margin-bottom: 5px;
+}
+
+.btnDelete {
+    position: absolute;
+    right: 3px;
+    top: 50%;
+
+    width: 16px;
+    height: 16px;
+
+    margin: 0;
+    padding: 0;
+
+    margin-top: -8px;
+
+    font-size: 11px;
+    text-align: center;
+
+    background-color: #B22;
+
+    border-radius: 100%;
+}
+
+    .btnDelete .delMin {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        width: 10px;
+        height: 2px;
+        margin: 0;
+        padding: 0;
+        margin-left: -5px;
+        margin-top: -1px;
+        background-color: white;
+    }
+
+    .btnDelete:hover {
+        background-color: red;
+        cursor: pointer;
+    }
+
+.addBtnHolder {
+    padding-top: 10px;
+    padding-left: 10px;
+}
+
+.btnAddAnswer {
+    display: inline-block;
+    padding: 4px;
+    border-radius: 4px;
+
+    color: #2B2;
+
+    border: 2px solid #2B2;
+
+    font-family: ComicNeueBold;
+    font-size: 13px;
+
+
+}
+
+.btnAddAnswer:hover {
+    cursor: pointer;
 }
