--- a/Wagnerett/Wagnerett/Master.Master
+++ b/Wagnerett/Wagnerett/Master.Master
@@ -6,7 +6,8 @@
 <head runat="server">
     <title></title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    
+    <script src="js/js.cookie.js"></script>
+
     <link href="/css/main.css" type="text/css" rel="stylesheet" />
     <link href="/css/radiobutton.css" rel="stylesheet" />
     <link href="/css/font.css" type="text/css" rel="stylesheet" />
